<resources>
    <string name="app_name">iddog</string>
    <string name="email_label">E-mail</string>
    <string name="sign_up">Registrar</string>
    <string name="husky">Husky</string>
    <string name="hound">Hound</string>
    <string name="pug">Pug</string>
    <string name="labrador">Labrador</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="logout">Deslogar</string>
</resources>
